--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "service.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon service.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +13,7 @@
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "jade": "^1.11.0",
-    "mysql": "^2.13.0"
+    "mysql": "^2.13.0",
+    "nodemon": "^1.11.0"
   }
 }
